--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aBoxesF1</title>
-    <link rel="shortcut icon" href="img\aBoxesF1Logo.png">
+    <link rel="shortcut icon" href="../img/aBoxesF1Logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,11 +14,11 @@
             <h1 class="mb-0">aBoxesF1</h1>
             <nav>
                 <ul class="nav">
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="pages/campeonato.html">Campeonato</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="pages/calendario.html">Calendario</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="pages/noticias.html">Noticias</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="pages/contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="campeonato.html">Campeonato</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="calendario.html">Calendario</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#">Noticias</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
