--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,22 +6,31 @@
     <title>aBoxesF1</title>
     <link rel="shortcut icon" href="../img/aBoxesF1Logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="bg-dark text-white py-3 mb-4">
-        <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-            <h1 class="mb-0">aBoxesF1</h1>
-            <nav>
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link text-white" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="campeonato.html">Campeonato</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="calendario.html">Calendario</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="noticias.html">Noticias</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <img src="../img/aBoxesF1Logo.png" alt="Logo aBoxesF1" width="40" height="40" class="me-2" style="object-fit:contain;">
+                    <span class="fw-bold text-white">aBoxesF1</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link active" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./campeonato.html">Campeonato</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./calendario.html">Calendario</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./noticias.html">Noticias</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <main>
