Correccion layout blog + dudas y tamaño video

--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
                 <p class="card-text mb-4">
                     Reviví los momentos más emocionantes de la temporada: adelantamientos imposibles, finales de infarto y grandes sorpresas. ¡No te lo pierdas!
                 </p>
+                <p class="fw-bold">La pole lap de Oscar Piastri | Gran Premio de España 2025 | Pirelli</p>
                 <div class="ratio ratio-16x9">
                     <video controls class="w-100 rounded-3">
-                        <source src="img/VerstappenRussellColision.mp4" type="video/mp4">
+                        <source src="img\PiastriPole.mp4" type="video/mp4">
                         Tu navegador no soporta video HTML5.
                     </video>
                 </div>
@@ -193,7 +194,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         
             <!-- Dudas -->
             <div class="col-12 col-lg-4">
@@ -207,6 +207,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <!-- Redes Sociales -->
