--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="../index.html">
                     <img src="../img/aBoxesF1Logo.png" alt="Logo aBoxesF1" class="logo-header">
                 </a>
@@ -34,13 +34,122 @@
     </header>
 
     <main>
-        <section>
+        <section id="calendario" class="container my-5">
+            <h2 class="text-center mb-4 text-white">Próximas Carreras 2025</h2>
+            <div class="d-flex flex-column gap-4">
 
+                <div class="card bg-black text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Canadá</h5>
+                    <p><strong>Fecha:</strong> 16 de junio</p>
+                    <p><strong>Ubicación:</strong> Montreal, Canadá</p>
+                    <p><strong>Circuito:</strong> Circuito Gilles Villeneuve</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Austria</h5>
+                    <p><strong>Fecha:</strong> 30 de junio</p>
+                    <p><strong>Ubicación:</strong> Spielberg, Austria</p>
+                    <p><strong>Circuito:</strong> Red Bull Ring</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Gran Bretaña</h5>
+                    <p><strong>Fecha:</strong> 7 de julio</p>
+                    <p><strong>Ubicación:</strong> Silverstone, Reino Unido</p>
+                    <p><strong>Circuito:</strong> Circuito de Silverstone</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Bélgica</h5>
+                    <p><strong>Fecha:</strong> 28 de julio</p>
+                    <p><strong>Ubicación:</strong> Spa-Francorchamps, Bélgica</p>
+                    <p><strong>Circuito:</strong> Circuito de Spa-Francorchamps</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Hungría</h5>
+                    <p><strong>Fecha:</strong> 21 de julio</p>
+                    <p><strong>Ubicación:</strong> Budapest, Hungría</p>
+                    <p><strong>Circuito:</strong> Hungaroring</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Países Bajos</h5>
+                    <p><strong>Fecha:</strong> 25 de agosto</p>
+                    <p><strong>Ubicación:</strong> Zandvoort, Países Bajos</p>
+                    <p><strong>Circuito:</strong> Circuito de Zandvoort</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Italia</h5>
+                    <p><strong>Fecha:</strong> 1 de septiembre</p>
+                    <p><strong>Ubicación:</strong> Monza, Italia</p>
+                    <p><strong>Circuito:</strong> Autódromo Nacional de Monza</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Azerbaiyán</h5>
+                    <p><strong>Fecha:</strong> 14 de julio</p>
+                    <p><strong>Ubicación:</strong> Bakú, Azerbaiyán</p>
+                    <p><strong>Circuito:</strong> Circuito callejero de Bakú</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Singapur</h5>
+                    <p><strong>Fecha:</strong> 22 de septiembre</p>
+                    <p><strong>Ubicación:</strong> Singapur</p>
+                    <p><strong>Circuito:</strong> Circuito Urbano de Marina Bay</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Estados Unidos</h5>
+                    <p><strong>Fecha:</strong> 20 de octubre</p>
+                    <p><strong>Ubicación:</strong> Austin, Texas, EE.UU.</p>
+                    <p><strong>Circuito:</strong> Circuito de las Américas</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de México</h5>
+                    <p><strong>Fecha:</strong> 27 de octubre</p>
+                    <p><strong>Ubicación:</strong> Ciudad de México, México</p>
+                    <p><strong>Circuito:</strong> Autódromo Hermanos Rodríguez</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Brasil</h5>
+                    <p><strong>Fecha:</strong> 3 de noviembre</p>
+                    <p><strong>Ubicación:</strong> São Paulo, Brasil</p>
+                    <p><strong>Circuito:</strong> Autódromo José Carlos Pace (Interlagos)</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Las Vegas</h5>
+                    <p><strong>Fecha:</strong> 17 de noviembre</p>
+                    <p><strong>Ubicación:</strong> Las Vegas, Nevada, EE.UU.</p>
+                    <p><strong>Circuito:</strong> Circuito Callejero de Las Vegas</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Catar</h5>
+                    <p><strong>Fecha:</strong> 29 de septiembre</p>
+                    <p><strong>Ubicación:</strong> Losail, Catar</p>
+                    <p><strong>Circuito:</strong> Circuito de Losail</p>
+                </div>
+
+                <div class="card bg-dark text-light p-3 rounded border-warning">
+                    <h5 class="text-warning mb-2">Gran Premio de Abu Dabi</h5>
+                    <p><strong>Fecha:</strong> 24 de noviembre</p>
+                    <p><strong>Ubicación:</strong> Abu Dabi, Emiratos Árabes Unidos</p>
+                    <p><strong>Circuito:</strong> Circuito Yas Marina</p>
+                </div>
+            </div>
         </section>
     </main>
 
-    <footer>
-
+    <footer class="bg-warning text-black py-4 mt-auto">
+        <div class="container-fluid text-center">
+            <small>&copy; 2025 aBoxesF1. Todos los derechos reservados.</small>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
