--- a/pages/campeonato.html
+++ b/pages/campeonato.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="../index.html">
                     <img src="../img/aBoxesF1Logo.png" alt="Logo aBoxesF1" class="logo-header">
                 </a>
@@ -34,13 +34,91 @@
     </header>
 
     <main>
-        <section>
+        <div class="container my-5">
+            <section class="card mb-4">
+                <div class="card-header text-center bg-dark text-white">
+            <h3>Campeonato de Pilotos 2025</h3>
+            </div>
+            <div class="card-body p-0">
+                <div class="table-responsive">
+                    <table class="table table-striped table-dark text-center align-middle mb-0">
+                        <thead>
+                            <tr class="text-warning">
+                            <th class="text-warning">Puesto</th>
+                            <th class="text-warning">Piloto</th>
+                            <th class="text-warning">Escudería</th>
+                            <th class="text-warning">Puntos</th>
+                            <th class="text-warning">Victorias</th>
+                            <th class="text-warning">Podios</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr><td>1</td><td>Oscar Piastri</td><td>McLaren</td><td>186</td><td>5</td><td>8</td></tr>
+                            <tr><td>2</td><td>Lando Norris</td><td>McLaren</td><td>176</td><td>2</td><td>8</td></tr>
+                            <tr><td>3</td><td>Max Verstappen</td><td>Red Bull</td><td>137</td><td>2</td><td>4</td></tr>
+                            <tr><td>5</td><td>George Russell</td><td>Mercedes</td><td>111</td><td>0</td><td>4</td></tr>
+                            <tr><td>4</td><td>Charles Leclerc</td><td>Ferrari</td><td>94</td><td>0</td><td>3</td></tr>
+                            <tr><td>6</td><td>Lewis Hamilton</td><td>Ferrari</td><td>71</td><td>0</td><td>0</td></tr>
+                            <tr><td>7</td><td>Kimi Antonelli</td><td>Mercedes</td><td>48</td><td>0</td><td>0</td></tr>
+                            <tr><td>8</td><td>Alex Albon</td><td>Williams</td><td>42</td><td>0</td><td>0</td></tr>
+                            <tr><td>9</td><td>Isac Hadjar</td><td>Racing Bulls</td><td>21</td><td>0</td><td>0</td></tr>
+                            <tr><td>10</td><td>Esteban Ocon</td><td>Haas</td><td>20</td><td>0</td><td>0</td></tr>
+                            <tr><td>11</td><td>Nico Hulkenberg</td><td>Kick Sauber</td><td>16</td><td>0</td><td>0</td></tr>
+                            <tr><td>12</td><td>Lance Stroll</td><td>Aston Martin</td><td>14</td><td>0</td><td>0</td></tr>
+                            <tr><td>13</td><td>Carlos Sainz</td><td>Williams</td><td>12</td><td>0</td><td>0</td></tr>
+                            <tr><td>14</td><td>Pierre Gasly</td><td>Alpine</td><td>11</td><td>0</td><td>0</td></tr>
+                            <tr><td>15</td><td>Yuki Tsunoda</td><td>Red Bull</td><td>10</td><td>0</td><td>0</td></tr>
+                            <tr><td>16</td><td>Oliver Bearman</td><td>Haas</td><td>6</td><td>0</td><td>0</td></tr>
+                            <tr><td>17</td><td>Liam Lawson</td><td>Racing Bulls</td><td>4</td><td>0</td><td>0</td></tr>
+                            <tr><td>18</td><td>Fernando Alonso</td><td>Aston Martin</td><td>2</td><td>0</td><td>0</td></tr>
+                            <tr><td>19</td><td>Gabriel Bortoleto</td><td>Kick Sauber</td><td>0</td><td>0</td><td>0</td></tr>
+                            <tr><td>20</td><td>Jack Doohan</td><td>Alpine</td><td>0</td><td>0</td><td>0</td></tr>
+                            <tr><td>21</td><td>Franco Colapinto</td><td>Alpine</td><td>0</td><td>0</td><td>0</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            </section>
 
-        </section>
+            <section class="card mb-4">
+                <div class="card-header text-white text-center bg-dark">
+                    <h3>Campeonato de Constructores 2025</h3>
+                </div>
+                <div class="card-body p-0">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-dark text-center align-middle mb-0">
+                            <thead>
+                                <tr class="text-warning">
+                                <th class="text-warning">Puesto</th>
+                                <th class="text-warning">Escudería</th>
+                                <th class="text-warning">Puntos</th>
+                                <th class="text-warning">Victorias</th>
+                                <th class="text-warning">Podios</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr><td>1</td><td>McLaren</td><td>362</td><td>7</td><td>16</td></tr>
+                                <tr><td>2</td><td>Ferrari</td><td>165</td><td>0</td><td>3</td></tr>
+                                <tr><td>3</td><td>Mercedes</td><td>159</td><td>0</td><td>4</td></tr>
+                                <tr><td>4</td><td>Red Bull</td><td>144</td><td>2</td><td>4</td></tr>
+                                <tr><td>5</td><td>Williams</td><td>54</td><td>0</td><td>0</td></tr>
+                                <tr><td>6</td><td>Racing Bulls</td><td>28</td><td>0</td><td>0</td></tr>
+                                <tr><td>7</td><td>Haas</td><td>26</td><td>0</td><td>0</td></tr>
+                                <tr><td>8</td><td>Kick Sauber</td><td>16</td><td>0</td><td>0</td></tr>
+                                <tr><td>9</td><td>Aston Martin</td><td>16</td><td>0</td><td>0</td></tr>
+                                <tr><td>10</td><td>Alpine</td><td>11</td><td>0</td><td>0</td></tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
 
-    <footer>
-
+    <footer class="bg-warning text-black py-4 mt-auto">
+        <div class="container-fluid text-center">
+            <small>&copy; 2025 aBoxesF1. Todos los derechos reservados.</small>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
