--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="../index.html">
                     <img src="../img/aBoxesF1Logo.png" alt="Logo aBoxesF1" class="logo-header">
                 </a>
@@ -34,13 +34,13 @@
     </header>
 
     <main>
-        <section>
-
-        </section>
+        
     </main>
 
-    <footer>
-
+    <footer class="bg-warning text-black py-4 mt-auto">
+        <div class="container-fluid text-center">
+            <small>&copy; 2025 aBoxesF1. Todos los derechos reservados.</small>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
