Page Contacto y Noticias

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -34,7 +34,59 @@
     </header>
 
     <main>
-        
+        <section class="container my-5" style="max-width: 900px;">
+            <h2 class="text-center text-white mb-4">Últimas Noticias de Fórmula 1</h2>
+            <div class="row g-4">
+
+                <article class="col-12 col-md-6">
+                    <div class="card bg-dark text-white h-100 shadow-sm">
+                        <img src="../img/MonacoNorris.jpeg" class="card-img-top" alt="Lando Norris Ganando el Gran Premio de Mónaco 2025">
+                        <div class="card-body">
+                            <h5 class="card-title">Victoria historica en mónaco</h5>
+                            <p class="card-text">Un repaso a la increíble carrera en las calles del Principado...</p>
+                            <a href="#" class="btn btn-warning">Leer más</a>
+                        </div>
+                        <div class="card-footer text-muted">Publicado el 10 de junio de 2025</div>
+                    </div>
+                </article>
+
+                <article class="col-12 col-md-6">
+                    <div class="card bg-dark text-white h-100 shadow-sm">
+                        <img src="../img/CanadaGP.jpg" class="card-img-top" alt="Gran Premio de Canadá 2025">
+                        <div class="card-body">
+                            <h5 class="card-title">Previa: Canadá 2025</h5>
+                            <p class="card-text">Todo lo que tienes que saber antes de la próxima carrera en Montreal.</p>
+                            <a href="#" class="btn btn-warning">Leer más</a>
+                        </div>
+                        <div class="card-footer text-muted">Publicado el 8 de junio de 2025</div>
+                    </div>
+                </article>
+
+                <article class="col-12 col-md-6">
+                    <div class="card bg-dark text-white h-100 shadow-sm">
+                        <img src="../img/ValteriBottas.jpg" class="card-img-top" alt="¿Redbull, Alpine o Cadillac?">
+                        <div class="card-body">
+                            <h5 class="card-title">¿Redbull, Alpine o Cadillac?</h5>
+                            <p class="card-text">Valtteri Bottas evalúa opciones de tres Scuderías para competir en 2026.</p>
+                            <a href="#" class="btn btn-warning">Leer más</a>
+                        </div>
+                        <div class="card-footer text-muted">Publicado el 5 de junio de 2025</div>
+                    </div>
+                </article>
+
+                <article class="col-12 col-md-6">
+                    <div class="card bg-dark text-white h-100 shadow-sm">
+                        <img src="../img/VerstappenVSrussell.jpg" class="card-img-top" alt="Verstappen VS Russell">
+                        <div class="card-body">
+                            <h5 class="card-title">Verstappen VS Russell</h5>
+                            <p class="card-text">Gran premio de españa - polémica con Max Verstappen sobre el cierre de la carrera, cuando se descontroló y chocó a George Russell.</p>
+                            <a href="#" class="btn btn-warning">Leer más</a>
+                        </div>
+                        <div class="card-footer text-muted">Publicado el 2 de junio de 2025</div>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
 
     <footer class="bg-warning text-black py-4 mt-auto">
