--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,7 +34,41 @@
     </header>
 
     <main>
-        
+        <section class="container my-5" style="max-width: 700px;">
+            <h2 class="text-center text-white mb-4">Contacto</h2>
+            <div class="card p-4 bg-dark text-white shadow-sm">
+                <form>
+                    <div class="mb-3">
+                        <label for="Nombre" class="form-label">Nombre completo</label>
+                        <input type="text" class="form-control" id="nombre" placeholder="Tu nombre completo" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="Email" class="form-label">Correo electrónico</label>
+                        <input type="email" class="form-control" id="email" placeholder="ejemplo@correo.com" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="Asunto" class="form-label">Asunto</label>
+                        <input type="text" class="form-control" id="asunto" placeholder="Motivo del contacto" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="Mensaje" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje aquí..." required></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-warning w-100">Enviar</button>
+                </form>
+            </div>
+
+            <div class="mt-5 text-center text-white">
+                <h5>O también puedes contactarnos por:</h5>
+                <p>Email: contacto@tusitio.com</p>
+                <p>Teléfono: +54 9 99 999 9999</p>
+                <p>Dirección: Calle 999, Cordoba, Argentina</p>
+            </div>
+        </section>
     </main>
 
     <footer class="bg-warning text-black py-4 mt-auto">
