Fixes Logo NavBar Mobile

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <div class="carousel-item active">
                 <div class="card shadow-sm">
                   <img src="img/MonacoNorris.jpeg" class="card-img-top" alt="Lando Norris Ganando el Gran Premio de Mónaco 2025" />
-                  <div class="card-body">
+                  <div class="card-body text-center">
                     <h5 class="card-title">Victoria histórica en Mónaco</h5>
                     <p class="card-text">Un repaso a la increíble carrera en las calles del Principado...</p>
-                    <a href="pages/noticias.html" class="btn btn-warning">Leer más</a>
+                    <a href="./pages/noticias.html" class="btn btn-warning">Leer más</a>
                   </div>
                 </div>
               </div>
@@ -83,10 +83,10 @@
               <div class="carousel-item">
                 <div class="card shadow-sm">
                   <img src="img/CanadaGP.jpg" class="card-img-top" alt="Gran Premio de Canadá 2025" />
-                  <div class="card-body">
+                  <div class="card-body text-center">
                     <h5 class="card-title">Previa: Canadá 2025</h5>
                     <p class="card-text">Todo lo que tienes que saber antes de la próxima carrera en Montreal.</p>
-                    <a href="pages/noticias.html" class="btn btn-warning">Leer más</a>
+                    <a href="./pages/noticias.html" class="btn btn-warning">Leer más</a>
                   </div>
                 </div>
               </div>
@@ -94,10 +94,10 @@
               <div class="carousel-item">
                 <div class="card shadow-sm">
                   <img src="img/ValteriBottas.jpg" class="card-img-top" alt="¿Redbull, Alpine o Cadillac?" />
-                  <div class="card-body">
+                  <div class="card-body text-center">
                     <h5 class="card-title">¿Redbull, Alpine o Cadillac?</h5>
                     <p class="card-text">Valtteri Bottas evalúa opciones de tres Scuderías para competir en 2026.</p>
-                    <a href="pages/noticias.html" class="btn btn-warning">Leer más</a>
+                    <a href="./pages/noticias.html" class="btn btn-warning">Leer más</a>
                   </div>
                 </div>
               </div>
@@ -167,7 +167,6 @@
     <section class="mb-5">
         <div class="row g-4">
 
-            <!-- Sobre el blog -->
             <div class="col-12 col-lg-8">
                 <div class="card bg-dark text-light border-warning shadow-lg h-100">
                     <div class="card-body p-5 d-flex flex-column justify-content-center">
@@ -188,7 +187,6 @@
                 </div>
             </div>
         
-            <!-- Dudas -->
             <div class="col-12 col-lg-4">
                 <div class="card bg-warning text-dark shadow-lg h-100 text-center">
                     <div class="card-body d-flex flex-column justify-content-center p-4">
@@ -215,7 +213,6 @@
             <a href="https://youtube.com/" target="_blank" class="main-social-link mx-2">YouTube</a>
         </div>
     </section>
-
   </main>
 
   <footer class="bg-warning text-black py-4 mt-auto">
