--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <!-- Header -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
@@ -36,12 +37,14 @@
 
   <main class="container my-5">
 
+    <!-- Bienvenida -->
     <section class="text-center mb-5">
       <h1 class="display-4 fw-bold text-white">Bienvenido a aBoxesF1</h1>
       <p class="lead">Últimas noticias, análisis y toda la pasión de la Fórmula 1 en un solo lugar.</p>
       <a href="pages/noticias.html" class="btn btn-warning btn-lg">Ver noticias</a>
     </section>
 
+    <!--Proxima Carrera-->
     <section class="mb-5">
         <div class="row g-4 align-items-center bg-dark rounded-3 p-4">
                 <div class="col-12 col-md-7 order-0 order-md-0">
@@ -61,6 +64,7 @@
         </div>
     </section>
 
+    <!-- Últimas Noticias y Top Pilotos/Escuderías -->
     <section class="mb-5">
       <div class="row g-4">
 
@@ -146,6 +150,7 @@
       </div> 
     </section>
 
+    <!-- Momento Destacado -->
     <section class="container my-5">
         <div class="card bg-dark text-white shadow-lg rounded-4 overflow-hidden">
             <div class="card-body text-center">
@@ -164,6 +169,7 @@
         </div>
     </section>
 
+    <!-- Sobre aBoxesF1 y Contacto -->
     <section class="mb-5">
         <div class="row g-4">
 
@@ -201,6 +207,7 @@
         </div>
     </section>
 
+    <!-- Redes Sociales -->
     <section class="text-center mt-4" id="redes-sociales">
         <h3 class="mb-3 text-white">Síguenos en redes sociales</h3>
         <div>
@@ -215,6 +222,7 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer class="bg-warning text-black py-4 mt-auto">
     <div class="container-fluid text-center">
       <small>&copy; 2025 aBoxesF1. Todos los derechos reservados.</small>
