--- a/pages/campeonato.html
+++ b/pages/campeonato.html
@@ -35,6 +35,7 @@
 
     <main>
         <div class="container my-5">
+            <!-- Tabla Pilotos -->
             <section class="card mb-4">
                 <div class="card-header text-center bg-dark text-white">
             <h3>Campeonato de Pilotos 2025</h3>
@@ -80,6 +81,7 @@
             </div>
             </section>
 
+            <!-- Tabla Constructores -->
             <section class="card mb-4">
                 <div class="card-header text-white text-center bg-dark">
                     <h3>Campeonato de Constructores 2025</h3>
