--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -34,6 +34,7 @@
     </header>
 
     <main>
+        <!-- Noticias -->
         <section class="container my-5" style="max-width: 900px;">
             <h2 class="text-center text-white mb-4">Últimas Noticias de Fórmula 1</h2>
             <div class="row g-4">
