--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -34,6 +34,7 @@
     </header>
 
     <main>
+        <!-- Calendario -->
         <section id="calendario" class="container my-5">
             <h2 class="text-center mb-4 text-white">Próximas Carreras 2025</h2>
             <div class="d-flex flex-column gap-4">
