--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,6 +34,7 @@
     </header>
 
     <main>
+        <!-- Formulario de contacto -->
         <section class="container my-5" style="max-width: 700px;">
             <h2 class="text-center text-white mb-4">Contacto</h2>
             <div class="card p-4 bg-dark text-white shadow-sm">
