--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -35,7 +35,7 @@
 
     <main>
         <!-- Calendario -->
-        <section id="calendario" class="container my-5">
+        <section id="calendario" class="container my-5 slide-in-left">
             <h2 class="text-center mb-4 text-white">Próximas Carreras 2025</h2>
             <div class="d-flex flex-column gap-4">
 
