--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -35,7 +35,7 @@
 
     <main>
         <!-- Noticias -->
-        <section class="container my-5" style="max-width: 900px;">
+        <section class="container my-5 bienvenido" style="max-width: 900px;">
             <h2 class="text-center text-white mb-4">Últimas Noticias de Fórmula 1</h2>
             <div class="row g-4">
 
