--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <main class="container my-5">
 
     <!-- Bienvenida -->
-    <section class="text-center mb-5">
+    <section class="text-center mb-5 slide-in-left">
       <h1 class="display-4 fw-bold text-white">Bienvenido a aBoxesF1</h1>
       <p class="lead">Últimas noticias, análisis y toda la pasión de la Fórmula 1 en un solo lugar.</p>
       <a href="pages/noticias.html" class="btn btn-warning btn-lg">Ver noticias</a>
@@ -46,7 +46,7 @@
 
     <!--Proxima Carrera-->
     <section class="mb-5">
-        <div class="row g-4 align-items-center bg-dark rounded-3 p-4">
+        <div class="row g-4 align-items-center bg-dark rounded-3 p-4 slide-in-left">
                 <div class="col-12 col-md-7 order-0 order-md-0">
                     <h2 class="text-warning">Próxima Carrera: Gran Premio de Canadá</h2>
                     <ul class="list-unstyled fs-5">
@@ -118,7 +118,7 @@
           </div>
         </div>
        
-        <div class="col-12 col-lg-5 order-2 order-lg-2 d-flex flex-column gap-4 align-items-stretch">            
+        <div class="col-12 col-lg-5 order-2 order-lg-2 d-flex flex-column gap-4 align-items-stretch slide-in-right">            
             <div class="bg-dark text-white p-4 rounded-3">
                 <h2 class="mb-3 text-white text-center">Top 3 Pilotos</h2>
                 <table class="table table-striped table-dark mb-0 text-center">
@@ -152,7 +152,7 @@
 
     <!-- Momento Destacado -->
     <section class="container my-5">
-        <div class="card bg-dark text-white shadow-lg rounded-4 overflow-hidden">
+        <div class="card bg-dark text-white shadow-lg rounded-4 overflow-hidden slide-in-left">
             <div class="card-body text-center">
                 <h2 class="card-title text-warning mb-3">🎥 Momento Destacado</h2>
                 <p class="card-text mb-4">
@@ -175,7 +175,7 @@
 
             <div class="col-12 col-lg-8">
                 <div class="card bg-dark text-light border-warning shadow-lg h-100">
-                    <div class="card-body p-5 d-flex flex-column justify-content-center">
+                    <div class="card-body p-5 d-flex flex-column justify-content-center slide-in-left">
                         <h2 class="card-title text-warning text-center mb-4">🏁 Sobre aBoxesF1</h2>
                         <p class="card-text fs-5">
                             Bienvenido a <strong>aBoxesF1</strong>, tu espacio dedicado exclusivamente al mundo de la Fórmula 1. Este blog nace de la pasión por los motores, las estrategias de carrera y cada detalle que hace único a este deporte.
@@ -194,7 +194,7 @@
             </div>
         
             <div class="col-12 col-lg-4">
-                <div class="card bg-warning text-dark shadow-lg h-100 text-center">
+                <div class="card bg-warning text-dark shadow-lg h-100 text-center slide-in-right">
                     <div class="card-body d-flex flex-column justify-content-center p-4">
                         <h3 class="card-title mb-3 fw-bold">¿Tienes dudas o sugerencias?</h3>
                         <p class="card-text mb-4">
@@ -208,7 +208,7 @@
     </section>
 
     <!-- Redes Sociales -->
-    <section class="text-center mt-4" id="redes-sociales">
+    <section class="text-center mt-4 slide-in-left" id="redes-sociales">
         <h3 class="mb-3 text-white">Síguenos en redes sociales</h3>
         <div>
             <a href="https://twitter.com/" target="_blank" class="main-social-link mx-2">Twitter</a>
