--- a/pages/campeonato.html
+++ b/pages/campeonato.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-        <div class="container my-5">
+        <div class="container my-5 slide-in-left">
             <!-- Tabla Pilotos -->
             <section class="card mb-4">
                 <div class="card-header text-center bg-dark text-white">
